objects/vlocity_cmt__TestResult__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AsyncApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Run</fullName>
                    <default>true</default>
                    <label>Not Run</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Invalid Test Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TestName__c</fullName>
        <label>Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TestSuiteUniqueKey__c</fullName>
        <label>Test Suite Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Result</label>
    <nameField>
        <label>Test Unique Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>